<resources>
    <string name="app_name">ClassParty</string>
    <string name="live_upcoming">Live &#38; Upcoming</string>
    <string name="art_creativity">Art &#38; Creativity</string>
    <string name="live">Live</string>
    <string name="intermediate_drawing">Drawing</string>
    <string name="join_now">Join Now</string>
    <string name="yoga">Yoga</string>
    <string name="dance">Dance</string>
    <string name="art">Art</string>
    <string name="news">News</string>
    <string name="watch_now">Watch Now</string>
    <string name="fitness">Fitness</string>
    <string name="games">Games</string>
    <string name="food">Food</string>
    <string name="gym">Gym</string>
    <string name="meditation">Meditation</string>
    <string name="foodNutrition">Food &#38; Nutrition</string>
    <string name="book">Book</string>
    <string name="dailCourses">Daily Courses &#38; Classes</string>
    <string name="artClasses">Art Classes</string>
    <string name="source">Source</string>
    <string name="date">Date</string>
    <string name="title">Title</string>

    <!--Time!-->
    <string name="thirtymins">30 mins</string>
    <string name="fortymins">40 mins</string>
    <string name="fiftymins">50 mins</string>


    <!--Fees!-->
    <string name="fourthousand">₹ 4,500 per person</string>
    <string name="fivethousand">₹ 5000 per person</string>
    <string name="sixtjousand">₹ 6000 per person</string>

    <!--Actor!-->
    <string name="christopherHemsworth">Chris Hemsworth</string>
    <string name="ramCharan">Ram Charan</string>
    <string name="vijay">Vijay Deverakonda</string>
    <string name="robert">Robert Downey</string>
    <string name="tom">Tom Cruise</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>