<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:nestedScrollingEnabled="false">


    <TextView
        android:id="@+id/daily_courses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:textSize="18sp"
        android:fontFamily="@font/benton_sans_bold"
        android:text="@string/dailCourses"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/daily_courses">

            <FrameLayout
                android:id="@+id/frameLayout1"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/leaves_in_deapth" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_text"
                    android:fontFamily="@font/benton_sans_regular"
                    android:padding="5dp"
                    android:text="@string/art_creativity"
                    android:textColor="@color/white" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@drawable/rounded_frame">

                    <TextView
                        android:id="@+id/live1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/benton_sans_regular"
                        android:text="@string/live"
                        android:textColor="@color/red"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/intermediate1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/benton_sans_regular"
                        android:text="@string/intermediate_drawing"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/live1" />

                    <TextView
                        android:id="@+id/time1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/thirtymins"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/intermediate1" />

                    <Button
                        android:id="@+id/bookBtn1"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/rounded_button"
                        android:fontFamily="@font/benton_sans_regular"
                        android:text="@string/book"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/fees1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/benton_sans_regular"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:text="@string/fivethousand"
                        app:layout_constraintBottom_toTopOf="@+id/bookBtn1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/frameLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toEndOf="@+id/cardview1"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/polaroid" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_text"
                    android:fontFamily="@font/benton_sans_regular"
                    android:padding="5dp"
                    android:text="@string/art_creativity"
                    android:textColor="@color/white" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rounded_frame"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/live2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/benton_sans_regular"
                        android:text="@string/live"
                        android:textColor="@color/red"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/intermediate2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/benton_sans_regular"
                        android:text="@string/intermediate_drawing"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/live2" />

                    <TextView
                        android:id="@+id/time2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/fiftymins"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/intermediate2" />

                    <Button
                        android:id="@+id/bookBtn2"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/rounded_button"
                        android:fontFamily="@font/benton_sans_regular"
                        android:text="@string/book"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/fees2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/benton_sans_regular"
                        android:text="@string/fourthousand"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toTopOf="@+id/bookBtn2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frameLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/fooddish" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_text"
                    android:fontFamily="@font/benton_sans_regular"
                    android:padding="5dp"
                    android:text="@string/foodNutrition"
                    android:textColor="@color/white" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rounded_frame"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/live3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/benton_sans_regular"
                        android:text="@string/live"
                        android:textColor="@color/red"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/intermediate3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/benton_sans_regular"
                        android:text="@string/food"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/live3" />

                    <TextView
                        android:id="@+id/time3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/fortymins"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/intermediate3" />

                    <Button
                        android:id="@+id/bookBtn3"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/rounded_button"
                        android:fontFamily="@font/benton_sans_regular"
                        android:text="@string/book"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/fees3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="7dp"
                        android:fontFamily="@font/benton_sans_regular"
                        android:text="@string/fourthousand"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toTopOf="@+id/bookBtn3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>